refactor(screen): 统一屏幕切换方法命名并添加加载转场支持
- 将 `turnScreen` 重命名为 `goScreen`，`turnNewScreen` 重命名为 `replaceScreen`
- 新增 `showScreen` 方法用于临时显示屏幕
- 引入 `playLoadingTransition` 方法支持带最小展示时间的异步加载转场
- 添加 `LoadingRenderer` 接口用于自定义加载动画渲染
- 更新 `GameScreen.rebuildScene` 方法支持原地场景重构
- 修改相关调用点以使用新的屏幕切换 API